# lomdos2

./: .env  .env.example  .gitignore  DEPLOY.md  GITHUB_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SETUP.md  POST_IMPLEMENTATION_CHECKLIST.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE_YI.md  README.md  ROADMAP.md  SETUP.md  SUPABASE_QUICKSTART.md  SUPABASE_SETUP.md  VOICEMAIL_SETUP.md  apply_migrations.ps1  create_superuser.py  index.html  init_settings.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.bat  setup.ps1  start_all.bat  start_beat.bat  start_celery.bat  start_django.bat  tailwind.config.ts
apps/books/: admin.py  models.py  urls.py  views.py
apps/core/: models.py  views.py
apps/customers/: admin.py  models.py  urls.py  views.py
apps/documents/: admin.py  apps.py  models.py  urls.py  views.py
apps/inventory/: urls.py
apps/orders/: admin.py  models.py  urls.py  views.py
apps/pricing/: admin.py  models.py
apps/reports/: models.py  urls.py  views.py
apps/suppliers/: __init__.py  admin.py  models.py  urls.py  views.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/: App.tsx  index.css
src/components/: ProtectedRoute.tsx
src/constants/: categories.ts
src/contexts/: AuthContext.tsx
src/hooks/: useBalances.ts  useBooks.ts  useCallLogs.ts  useCategories.ts  useCustomers.ts  useInventory.ts  useNotifications.ts  useOrders.ts  usePartnerAccounting.ts  usePromoCodes.ts  useSettings.ts  (+2 more)
static/: style.css
supabase/: SETUP.md  config.toml
templates/: base.html  performance_note.html
(+141 files in other folders)
